Add AGENT_NAME env var for agent identification
- Agents can now be named via AGENT_NAME environment variable
- Name is sent during registration and stored automatically
- Falls back to hostname if AGENT_NAME not set
- Banner in agent logs now shows both name and UUID
- Much easier to identify agents in the server UI

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,6 +24,7 @@ services:
     container_name: onlinetracker-agent
     environment:
       - MODE=agent
+      - AGENT_NAME=TAB2
       - SERVER_HOST=onlinetracker-server
       - COMS_PORT=8000
       - SHARED_SECRET=test-secret-change-me
