--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,13 @@
 #
 # Example: HOST_WEB_PORT=9000 docker compose up -d
 # Or create a .env file with: HOST_WEB_PORT=9000
+#
+# DATABASE OPTIONS:
+#   Default: SQLite (embedded, no setup needed)
+#   Optional: PostgreSQL (for high-scale deployments)
+#     - Uncomment the postgres service below
+#     - Set DATABASE_URL in onlinetracker-server environment
+#     - See docker-compose.postgres.yml for a ready-to-use PostgreSQL setup
 
 services:
   # Main server instance
@@ -21,12 +28,18 @@ services:
       - MODE=server
       - WEB_PORT=8000
       - COMS_PORT=19443
+      # Uncomment for PostgreSQL (requires postgres service below):
+      # - DATABASE_URL=postgresql+asyncpg://onlinetracker:onlinetracker@postgres:5432/onlinetracker
     ports:
       - "${HOST_WEB_PORT:-8000}:8000"      # Web UI + Admin API (keep internal)
       - "${HOST_COMS_PORT:-19443}:19443"   # Agent API only (safe to expose)
     volumes:
       - onlinetracker-data:/data
     restart: unless-stopped
+    # Uncomment if using PostgreSQL:
+    # depends_on:
+    #   postgres:
+    #     condition: service_healthy
 
   # Test agent instance
   # To use: set shared secret and allowed UUIDs in Settings first
@@ -46,6 +59,24 @@ services:
       - onlinetracker-server
     restart: unless-stopped
 
+  # PostgreSQL database (optional - uncomment for high-scale deployments)
+  # postgres:
+  #   image: postgres:16-alpine
+  #   container_name: onlinetracker-postgres
+  #   environment:
+  #     - POSTGRES_USER=onlinetracker
+  #     - POSTGRES_PASSWORD=onlinetracker
+  #     - POSTGRES_DB=onlinetracker
+  #   volumes:
+  #     - postgres-data:/var/lib/postgresql/data
+  #   healthcheck:
+  #     test: ["CMD-SHELL", "pg_isready -U onlinetracker"]
+  #     interval: 5s
+  #     timeout: 5s
+  #     retries: 5
+  #   restart: unless-stopped
+
 volumes:
   onlinetracker-data:
   onlinetracker-agent-data:
+  # postgres-data:  # Uncomment if using PostgreSQL
